keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    id: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      id: keycloak
  template:
    metadata:
      labels:
        id: keycloak
    spec:
      containers:
        - name: keycloak
          image: europe-central2-docker.pkg.dev/flawless-lacing-424510-g2/backend-java/keycloak:lolmatch
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8443
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 8443
            initialDelaySeconds: 30
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    id: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8443
