keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ip-keycloak"
    networking.gke.io/managed-certificates: "keycloak-certificate"
spec:
  ingressClassName: gce
  rules:
    - host: idp.lolmatch.click
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 80
